@@ -18,6 +18,7 @@ netdiscovery/netinventory:
 * Add BlueCoat proxy appliance serialnumber support
 * win32: Support arp table check for NetDiscovery task
 * Fix #634: Net::Ping version may not numeric with win32 installer
+* Add Panasas PanFS support
 
 2.4.2 Wed, 03 Oct 2018
 
